# wasmcentipede

./: Cargo.toml  index.html
pkg/: index.html  package.json  wasmcentipede.d.ts  wasmcentipede.js  wasmcentipede_bg.wasm  wasmcentipede_bg.wasm.d.ts
src/: centipede.rs  lib.rs
