[package]
name = "wasmcentipede"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
js-sys = "0.3.57"
wasm-bindgen = "0.2.80"
web-sys = { version = "0.3.57", features = ["Window"] }

[target.'cfg(not(target_family = "wasm"))'.dependencies]
rand = "0.8.5"

